fix: hide create button on small screen

--- a/src/components/DashboardsBar/styles/DashboardsBar.module.css
+++ b/src/components/DashboardsBar/styles/DashboardsBar.module.css
@@ -15,7 +15,7 @@
 }
 
 @media only screen and (max-width: 480px) {
-    .createDashboardButton,
+    .blockCreationNavigation .createDashboardButton,
     .navMenuButtonText {
         display: none;
     }
